--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "devDependencies": {
     "eslint": "^0.6.2",
     "gulp": "^3.6.2",
-    "gulp-eslint": "^0.1.7"
+    "gulp-concat": "^2.2.0",
+    "gulp-eslint": "^0.1.7",
+    "gulp-header": "^1.0.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-tap": "^0.1.1",
+    "gulp-uglify": "^0.3.1",
+    "merge-stream": "^0.1.1"
   },
   "license": "MIT"
 }
