Add testem as dev dependency for travis ci

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-rename": "^1.2.0",
     "gulp-tap": "^0.1.1",
     "gulp-uglify": "^0.3.1",
-    "merge-stream": "^0.1.1"
+    "merge-stream": "^0.1.1",
+    "testem": "^0.6.24"
   },
   "license": "MIT"
 }
