--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-waypoints",
-  "version": "3.0.1",
-  "author": "Caleb Troughton <caleb@imakewebthings.com>",
+  "version": "3.1.0",
+  "author": "Caleb Troughton <caleb@imakewebthings.com> (http://imakewebthings.com)",
   "description": "A jQuery plugin that makes it easy to execute a function whenever you scroll to an element.",
   "scripts": {
     "build": "gulp build",
