--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "waypoints",
   "version": "3.1.1",
-  "main": "lib/noframework.waypoints.min.js",
+  "main": "lib/noframework.waypoints.js",
   "description": "Easily execute a function when you scroll to an element.",
   "ignore": [
     "gulpfile.js",
