Only refresh once during an enableAll call, #454
Previously, enableAll would invoke enable on each Waypoint, but
enable calls refresh on the context. This meant n-refreshes where
n is the number of active Waypoints.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gulp-tap": "^0.1.1",
     "gulp-uglify": "^0.3.1",
     "merge-stream": "^0.1.1",
-    "testem": "^0.6.24"
+    "testem": "0.6.24"
   },
   "license": "MIT"
 }
